# AnimatedDrawings

./: pyproject.toml
animated_drawings/: config.py  utils.py
animated_drawings/model/: arap.py  retargeter.py
animated_drawings/view/: mesa_view.py  window_view.py
examples/: annotations_to_animation.py  image_to_animation.py  image_to_annotations.py
examples/config/mvc/: export_mp4_mp4v.yaml
tests/: test_animated_drawing.py  test_bvh.py  test_render.py
torchserve/: Dockerfile  config.properties
